// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Toast /> should be auto dismissable 1`] = `
<div>
  <div
    class="junipero toasts"
  >
    <div
      class="junipero toast"
    >
      Content
      <div
        class="countdown"
        style="animation-duration: 100ms; animation-play-state: running;"
      />
    </div>
  </div>
</div>
`;

exports[`<Toast /> should be auto dismissable 2`] = `
<div>
  <div
    class="junipero toasts"
  />
</div>
`;

exports[`<Toast /> should be manually dismissable 1`] = `
<div>
  <div
    class="junipero toasts"
  >
    <div
      class="junipero toast"
    >
      Content
      <div
        class="countdown"
        style="animation-duration: 100ms; animation-play-state: running;"
      />
    </div>
  </div>
</div>
`;

exports[`<Toast /> should be manually dismissable 2`] = `
<div>
  <div
    class="junipero toasts"
  />
</div>
`;

exports[`<Toast /> should render 1`] = `
<div>
  <div
    class="junipero toast"
  >
    Content
  </div>
</div>
`;
